--- a/server/store/inventory/templates/base.html
+++ b/server/store/inventory/templates/base.html
@@ -3,16 +3,15 @@
 <html>
 
 <head>
-
-
     {% block meta %}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
     {% endblock meta %}
     {% block styles %}
-    <link href="https://unpkg.com/vuesax@4.0.1-alpha.16/dist/vuesax.min.css" rel="stylesheet">
-    <link href="{% static "entries/css/main.css" %}" rel="stylesheet">
+    <!-- <link href="https://unpkg.com/vuesax@4.0.1-alpha.16/dist/vuesax.min.css" rel="stylesheet"> -->
+    <link href="{% static "inventory/styles/css/vuesax.min.css" %}" rel="stylesheet">
+    <link href="{% static "inventory/styles/css/base.css" %}" rel="stylesheet">
     {% endblock styles %}
     <title> {% block title %}Title{% endblock title %} </title>
 </head>
@@ -30,8 +29,10 @@
         {% endblock footer %}
     </div>
     {%block scripts %}
-    <script src="https://unpkg.com/vue/dist/vue.js"></script>
-    <script src="https://unpkg.com/vuesax@4.0.1-alpha.16/dist/vuesax.min.js"></script>
+    <!-- <script src="https://unpkg.com/vue/dist/vue.js"></script> -->
+    <script src="{% static "inventory/scripts/js/vue.js" %}"></script>
+    <script src="{% static "inventory/scripts/js/vuesax.min.js" %}"></script>
+    <!-- <script src="https://unpkg.com/vuesax@4.0.1-alpha.16/dist/vuesax.min.js"></script> -->
     <script>
         new Vue({
             el: '#app'
