--- a/server/store/inventory/templates/index.html
+++ b/server/store/inventory/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static from static %}
 {% block title %}Section 1{% endblock %}
-{% block page-content %}
+{% block content %}
 <div class="arts-disp container is-fluid">
 
     <div class="columns">
@@ -18,7 +18,7 @@
             </div>
             <div class="articles-container">
                 {% for item in articles %}
-                <div class="art-vert-tpl">
+                <div class="art-vert-tpl"  onclick="console.log('{{item.name}}')">
                     <div style="background-image: url('{% static "inventory/media/images/hugo-online-shopping.png" %}');"
                         class="img-section">
                     </div>
@@ -46,4 +46,6 @@
         </div>
     </div>
 </div>
+
+<script src="{% static "inventory/scripts/js/cart.js" %}" type="text/javascript"></script>
 {% endblock %}
