--- a/server/store/inventory/templates/index.html
+++ b/server/store/inventory/templates/index.html
@@ -35,7 +35,7 @@
                     </div>
                     <div class="data-s">
 
-                        <p class=" is-4 ">{{item.name}}</p>
+                        <h4 style="font-weight: 700;" class=" is-4 ">{{item.name}}</h4>
                         <p class=" is-6">by <b>{{item.maker | upper}}</b></p>
 
                         <span class="tag is-danger" style="margin: 0.5em 0 0.5em 0;"><b>cost:
@@ -61,7 +61,7 @@
     <div class="cit-val">
         <b class="cit-val-name">Article name</b>
     </div>
-    <div class="cit-controls">        
+    <div class="cit-controls">
         <button id="cit-inc" class="button is-danger ">
             <span class="icon is-small">
                 <i class=" gg-add"></i>
@@ -70,7 +70,7 @@
         <b id="cit-count">100</b>
         <button id="cit-dec" class="button is-info ">
             <span class="icon is-small">
-                <i class=" gg-remove"></i>                
+                <i class=" gg-remove"></i>
             </span>
         </button>
     </div>
@@ -85,15 +85,65 @@
         </header>
         <section class="modal-card-body columns">
             <div class="mcb-articles column is-two-thirds">
-                
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th><abbr title="Article name">Article name</abbr></th>
+                            <th><abbr title="Controls">Unit price</abbr></th>
+                            <th><abbr title="Quantity">Quantity</abbr></th>
+                            <th><abbr title="Lost">Total price</abbr></th>
+                            <th><abbr title="Goals for">Is available</abbr></th>
+                            <th>Actions</th>
+
+                        </tr>
+                    </thead>
+                    <tbody id="items-table-body">
+                        <div class="notification">
+                            <button class="delete hide-btn"></button>
+                            <p>Add items to your basket to see them appear here. simply click on them</p>
+                        </div>
+                        <tr>
+                            <td>Keyboard static</td>
+                            <td>23</td>
+                            <td></td>
+                            <td>3</td>
+                            <td>68</td>
+                            <td>
+                                <div class="field has-addons">
+                                    <p class="control">
+                                        <button class="button is-primary  is-small">
+                                            <span>Add</span>
+                                        </button>
+                                    </p>
+                                    <p class="control">
+                                        <button class="button  is-small">
+                                            <span>Deduct</span>
+                                        </button>
+                                    </p>
+                                    <p class="control">
+                                        <button class="button is-danger is-small">
+                                            <span>Delete</span>
+                                        </button>
+                                    </p>
+                                </div>
+                            </td>
+
+                        </tr>
+
+
+                    </tbody>
+                    <tfoot>
+
+                    </tfoot>
+                </table>
             </div>
             <aside class="mcb-agg-calc column is-one-thirds">
                 calc
             </aside>
         </section>
         <footer class="modal-card-foot">
-            <button class="button is-success">Save changes</button>
-            <button class="button">Cancel</button>
+            <button class="button is-success">Buy</button>
+            <!-- <button id class="button">Cancel</button> -->
         </footer>
     </div>
 </div>
