--- a/server/store/inventory/templates/base.html
+++ b/server/store/inventory/templates/base.html
@@ -10,10 +10,11 @@
     {% endblock meta %}
     {% block styles %}
     <!-- <link href="https://unpkg.com/vuesax@4.0.1-alpha.16/dist/vuesax.min.css" rel="stylesheet"> -->
+    <link href="{% static "inventory/styles/css/iziToast.css" %}" rel="stylesheet">
     <link href="{% static "inventory/styles/css/bulma.css" %}" rel="stylesheet">
     <!-- <link href="{% static "inventory/styles/css/vuesax.min.css" %}" rel="stylesheet">     -->
-    <link href="{% static "inventory/styles/css/gg.css" %}" rel="stylesheet">
-    <link href="{% static "inventory/styles/css/app.css" %}" rel="stylesheet">
+    <link href="{% static "inventory/styles/css/gg.css" %}" rel="stylesheet">    
+    <link href="{% static "inventory/styles/css/app.css" %}" rel="stylesheet">    
 
 
     {% endblock styles %}
@@ -118,9 +119,10 @@
 
     {%block scripts %}
     <!-- <script src="https://unpkg.com/vue/dist/vue.js"></script> -->
-    <!-- <script src="{% static "inventory/scripts/js/vue.js" %}"></script>
+    <!-- <script src="{% static "inventory/scripts/js/vue.js" %}"></script>    
     <script src="{% static "inventory/scripts/js/vuesax.min.js" %}"></script> -->
     <!-- <script src="https://unpkg.com/vuesax@4.0.1-alpha.16/dist/vuesax.min.js"></script> -->
+    <script src="{% static "inventory/scripts/js/iziToast.js" %}"></script>
     <script>
         /*         new Vue({
                     el: '#app',
